--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.1.2 <3.0.0'
+  sdk: '>=2.2.2 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,6 +35,7 @@ dependencies:
   intl: ^0.15.8
   google_sign_in: ^5.0.2
   flutter_signin_button: ^1.1.0
+  get: ^4.1.4
 
 
   # The following adds the Cupertino Icons font to your application.
